@@ -519,8 +519,8 @@ EXAMPLE_RECURSIVE      = NO
 # directories that contain image that are included in the documentation (see 
 # the \image command).
 
-IMAGE_PATH             = @top_srcdir@/doc/examples/demo \
-                         @top_srcdir@/doc/api
+IMAGE_PATH             = @top_builddir@/doc/examples/demo \
+                         @top_builddir@/doc/api
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should 
 # invoke to filter for each input file. Doxygen will invoke the filter program 
